# mimikago

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/server/: Cargo.toml
apps/server/src/: db.rs  main.rs  models.rs  scanner.rs  service.rs
apps/server/src/handlers/: library.rs
docs/: DEVELOPMENT.md  HANDOFF.md  requirements-v4.md  ui-design-v1.md  web-architecture-proposal.md  wireframe-library-v4.jsx
src/: App.tsx  api.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  dlsite.rs  lib.rs  main.rs  models.rs  scanner.rs  service.rs
src/components/: CoverImage.tsx  DetailPanel.tsx  FullScreenPlayer.tsx  FullView.tsx  Header.tsx  LibraryGrid.tsx  LibraryTable.tsx  NewWorkPopup.tsx  PlayerBar.tsx  SearchConditionsBar.tsx  SettingsModal.tsx  SetupScreen.tsx  UrlButtons.tsx  WorkCard.tsx
src/hooks/: useLibrary.ts  usePlayer.ts
src/styles/: global.css
src/test/: api.test.ts  setup.ts  types.test.ts  usePlayer.test.ts
